Added sending sms filtered by port